# surgical_instruments_detection

./: .gitignore  README.md  config.json  notebook.ipynb  pyproject.toml  ruff.toml  start_app.bat  start_app.sh
notebooks/: model_training.ipynb
runs/detect/predict/labels/: 251333220_617005302668849_7001394344599905952_n_jpg.rf.4b47dc413f946fc3f8c92a27407c553c.txt  252187892_415816380257215_8969784532870802759_n_jpg.rf.e3cb052a6f033582de0f166723119019.txt  4-surgical-instruments-and-swabs-on-a-tray-digicomphotoscience-photo-library.txt  6_Babcock_Tissue_Forceps_117_jpg.rf.cf4374f98e74375e543508a444715055.txt  6_Babcock_Tissue_Forceps_152_jpg.rf.c2ab986d309f30f79d1435af849c341b.txt  6_Babcock_Tissue_Forceps_152_jpg.rf.c2ab986d309f30f79d1435af849c341b_aug0.txt  6_Babcock_Tissue_Forceps_155_jpg.rf.9f222cbda27659b126f451ff7d2bf72c.txt  6_Babcock_Tissue_Forceps_157_jpg.rf.96fdb38a3db541c264b913706c7ee320.txt  6_Babcock_Tissue_Forceps_160_jpg.rf.7eb5dabb454cd645899bb65fbcc3c5be_aug0.txt  (+56 more)
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml
runs/detect/train9/: args.yaml  results.csv
runs/segment/train/: args.yaml
src/: __init__.py  api.py  gui_client.py  utils.py
storage/sessions/20250602_133324/: session_data.json
storage/sessions/20250602_133419/: session_data.json
storage/sessions/20250602_133721/: session_data.json
(+4 files in other folders)
