[project]
name = "lynqo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "roboflow>=1.1.65",
    "ultralytics>=8.3.146",
    "wandb>=0.19.11",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.1",
    "pillow>=11.2.1",
    "loguru>=0.7.3",
]
